--- a/package.json
+++ b/package.json
@@ -21,8 +21,16 @@
     "@types/node": "^18.0.3",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
     "autoprefixer": "^10.4.7",
+    "eslint": "^8.55.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-redos": "^4.4.5",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "postcss": "^8.4.14",
+    "prettier": "^3.1.0",
     "tailwindcss": "^3.1.4"
   }
 }
