--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,7 @@
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
+    "project": true,
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
