--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,8 @@
         "checksVoidReturn": false
       }
     ],
-    "redos/no-vulnerable": "error"
+    "redos/no-vulnerable": "error",
+    "react/jsx-uses-react": "off",
+    "react/react-in-jsx-scope": "off"
   }
 }
