--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
     "dev": "next",
     "build": "next build && next export",
     "start": "next start",
-    "typecheck": "tsc"
+    "lint-fix": "next lint --fix",
+    "typecheck": "tsc",
+    "prettier-check": "prettier --cache --check .",
+    "prettier-fix": "prettier --cache --write ."
   },
   "dependencies": {
     "classnames": "^2.3.1",
